#!/usr/bin/python3
# ----------------------------------------------------------------------
# GSEWidgets - Collection of gui widgets to be used in GSE software.
# Author: Christofanis Skordas (skordasc@uchicago.edu)
# Copyright (C) 2022-2023  GSECARS, The University of Chicago, USA
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------

[metadata]
name = GSEWidgets
author = Christofanis Skordas
author_email = skordasc@uchicago.edu
description = Collection of gui widgets to be used in GSE software.
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GSECARS/GSEWidgets
project_urls =
    Bug Tracker = https://github.com/GSECARS/GSEWidgets/issues
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering

[options]
package_dir =
    =.
packages = find:
zip_safe = False
install_requires =
    PyQt6>=6.4.0
    qtpy>=2.2.1
python_requires = >=3.10

[versioneer]
VCS = git
style = pep440
versionfile_source = gsewidgets/_version.py
versionfile_build = gsewidgets/_version.py
tag_prefix = ''
parentdir_prefix = ''
